| Summary: | ASTERISK-28975: res_http_websocket: Text payload data doesn't necessary include trailing zero | ||
| Reporter: | Nickolay V. Shmyrev (nshmyrev) | Labels: | |
| Date Opened: | 2020-07-02 17:13:12 | Date Closed: | 2020-07-13 05:35:39 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_http_websocket |
| Versions: | 13.34.0 16.11.1 17.5.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | According to websocket spec https://tools.ietf.org/html/rfc6455#section-5.7 and practice there is no trailing zero for text messages, however, the code of ast_websocket_read_string expects them in this part:
{code} if (!(*buf = ast_malloc(payload_len + 1))) { return -1; } ast_copy_string(*buf, payload, payload_len + 1); return payload_len + 1; {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-07-02 17:13:13.201-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-07-13 05:35:41.277-0500 Change 14655 merged by Friendly Automation: res_http_websocket: Avoid reading past end of string [https://gerrit.asterisk.org/c/asterisk/+/14655|https://gerrit.asterisk.org/c/asterisk/+/14655] By: Friendly Automation (friendly-automation) 2020-07-13 05:35:56.879-0500 Change 14653 merged by Joshua Colp: res_http_websocket: Avoid reading past end of string [https://gerrit.asterisk.org/c/asterisk/+/14653|https://gerrit.asterisk.org/c/asterisk/+/14653] By: Friendly Automation (friendly-automation) 2020-07-13 05:36:35.967-0500 Change 14654 merged by Friendly Automation: res_http_websocket: Avoid reading past end of string [https://gerrit.asterisk.org/c/asterisk/+/14654|https://gerrit.asterisk.org/c/asterisk/+/14654] By: Friendly Automation (friendly-automation) 2020-07-13 05:36:40.159-0500 Change 14626 merged by Joshua Colp: res_http_websocket: Avoid reading past end of string [https://gerrit.asterisk.org/c/asterisk/+/14626|https://gerrit.asterisk.org/c/asterisk/+/14626] | ||